import 'package:firebase_auth/firebase_auth.dart';
import 'package:flutter/material.dart';
import 'package:get/get.dart';
import 'package:get/get_navigation/src/routes/circular_reveal_clipper.dart';
import 'package:mytodo/controllers/auth/signin_controller.dart';
import 'package:mytodo/screens/auth/singup.dart';
import 'package:mytodo/screens/home/home.dart';
import 'package:mytodo/services/app_snakbar.dart';
import 'package:mytodo/services/loading.dart';
import 'package:mytodo/widgets/app_textfiled.dart';

class SignInScreen extends StatelessWidget {
  SignInScreen({super.key});
  GlobalKey<FormState> formState = GlobalKey<FormState>();

  @override
  Widget build(BuildContext context) {
    SinginController _signinController = Get.put(SinginController());
    return Scaffold(
      appBar: AppBar(),
      body: SafeArea(
        child: Padding(
          padding: const EdgeInsets.all(16.0),
          child: Center(
              child: Column(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                const Text(
                  'Sign in ',
                  style: TextStyle(
                      fontSize: 24,
                      color: Colors.green,
                      fontWeight: FontWeight.w800),
                ),
                const SizedBox(
                  height: 16,
                ),
                Form(
                    key: formState,
                    child: Column(
                      children: [
                        AppTextField(
                            key: const ValueKey('email'),
                            validator: (val) {
                              bool valid = _signinController.isValidEmail(val);
                              if (valid == false) {
                                return 'please enter a valid email';
                              }
                            },
                            onSaved: (newVal) {
                              _signinController.email.text = newVal;
                            },
                            // onChanged: (val) {
                            //   _signinController.isValidEmail(val);
                            // },
                            hinttext: 'Enter your email',
                            textEditingController: _signinController.email),
                        const SizedBox(height: 16),
                        AppTextField(
                          key: const ValueKey('password'),
                          validator: (val) {
                            bool valid = _signinController.isValidPassword(val);
                            if (valid == false) {
                              return 'please enter a valid password at least 8 character';
                            }
                          },
                          onSaved: (newVal) {
                            _signinController.password.text = newVal;
                          },
                          // onChanged: (val) {
                          //   _signinController.isValidPassword(val);
                          // },
                          textEditingController: _signinController.password,
                          hinttext: 'Enter your password',
                          isPassword: true,
                        ),
                      ],
                    )),
                const SizedBox(
                  height: 8,
                ),
                Row(
                  children: [
                    const Text(
                      "don't have an account? ",
                      style: TextStyle(
                        fontSize: 16,
                        color: Colors.green,
                      ),
                    ),
                    TextButton(
                        onPressed: () {
                          Get.to(const SignUpScreen());
                        },
                        child: const Text('click here'))
                  ],
                ),
                MaterialButton(
                  key: ValueKey('login'),
                  textColor: Colors.white,
                  color: Colors.green,
                  onPressed: () async {
                    var current = formState.currentState;
                    if (current!.validate()) {
                      current.save();

                      showLoading(context);
                      var response = await _signinController.signIn(
                          _signinController.email.text,
                          _signinController.password.text);
                      closeLoding();

                      // ignore: avoid_print
                      Get.offAll(Home());
                    }
                  },
                  child: const Text('Sign in'),
                ),
              ])),
        ),
      ),
    );
  }
}
